Fix subnav height restriction by excluding it from top-level ul styles
- Change #nav ul to #nav ul:not(.subnav) to exclude subnav from height:26px
- Change #nav li a to #nav > ul > li > a to exclude subnav links from height:25px
- This ensures subnav can expand to show all menu items
- Fixes the issue where bottom half of subnav was cut off

--- a/manager/media/style/RevoStyle/style.css
+++ b/manager/media/style/RevoStyle/style.css
@@ -982,7 +982,7 @@ a.hometblink:hover {
     right: 10px;
 }
 
-#nav ul {
+#nav ul:not(.subnav) {
     display: none;
     height: 26px;
     position: relative;
@@ -991,7 +991,7 @@ a.hometblink:hover {
     padding: 0 0 0 20px;
 }
 
-.rtl #nav ul {
+.rtl #nav ul:not(.subnav) {
     margin: 0 -10px 0 0;
     padding: 0 20px 0 0;
 }
@@ -1009,7 +1009,7 @@ a.hometblink:hover {
     margin: 0 0 0 3px;
 }
 
-#nav li a {
+#nav > ul > li > a {
     color: #A4B8B6;
     height: 25px;
     text-decoration: none;
